fix: nav bar margin; bg image overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,26 +1,31 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
-.main{
+.main {
     width: 100%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%,rgba(0,0,0,0.5)50%),url(home.jpeg);
+    background: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 0.5) 50%,
+            rgba(0, 0, 0, 0.5) 50%
+        ),
+        url("../images/home.jpeg");
     background-position: center;
     background-size: cover;
-    height: 109vh;
+    height: 100vh;
 }
-.navbar{
-    width: 120%;
+.navbar {
+    width: 100%;
     height: 75px;
-    margin: 20px auto; 
+    padding: 20px auto;
 }
-.icon{
+.icon {
     width: 200px;
     float: left;
     height: 70px;
 }
-.logo{
+.logo {
     color: #fff;
     font-size: 35px;
     font-family: Arial;
@@ -28,40 +33,40 @@
     float: left;
     padding-top: 10px;
 }
-.menu{
+.menu {
     width: 400px;
     float: left;
     height: 70px;
 }
-ul{
+ul {
     float: left;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-ul li{
+ul li {
     list-style: none;
     margin-left: 62px;
     margin-top: 27px;
     font-size: 14px;
 }
-ul li a{
+ul li a {
     text-decoration: none;
     color: #fff;
     font-family: Arial;
     font-weight: bold;
     transition: 0.4s ease-in-out;
 }
-ul li a:hover{
+ul li a:hover {
     color: #ff7200;
 }
-.search{
+.search {
     width: 330px;
     float: left;
     margin-left: 270px;
 }
-.srch{
-    font-family:'Times New Roman';
+.srch {
+    font-family: "Times New Roman";
     width: 200px;
     height: 40px;
     background: transparent;
@@ -75,7 +80,7 @@ ul li a:hover{
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
 }
-.btn{
+.btn {
     width: 100px;
     height: 40px;
     background: #ff7200;
@@ -86,34 +91,34 @@ ul li a:hover{
     border-bottom-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-.btn:focus{
+.btn:focus {
     outline: none;
 }
-.srch:focus{
+.srch:focus {
     outline: none;
 }
-.content{
+.content {
     width: 1200px;
     height: auto;
     margin: auto;
     color: #fff;
     position: relative;
 }
-.content .par{
+.content .par {
     padding-left: 20px;
     padding-bottom: 25px;
     font-family: Arial;
     letter-spacing: 1.2px;
     line-height: 30px;
 }
-.content h1{
-    font-family:"Times New Roman";
+.content h1 {
+    font-family: "Times New Roman";
     font-size: 50px;
     padding-left: 20px;
     margin-top: 9%;
     letter-spacing: 2px;
 }
-.content .cn{
+.content .cn {
     width: 160px;
     height: 40px;
     background: #ff7200;
@@ -123,25 +128,28 @@ ul li a:hover{
     font-size: 18px;
     border-radius: 10px;
     cursor: pointer;
-    transition: .4s ease;
+    transition: 0.4s ease;
 }
-.content .cn a{
+.content .cn a {
     text-decoration: none;
     color: #000;
-    transition: .3s ease
+    transition: 0.3s ease;
 }
-.cn:hover{
+.cn:hover {
     background-color: #fff;
 }
-.content span{
+.content span {
     color: #ff7200;
     font-size: 60px;
-
 }
-.form{
+.form {
     width: 255px;
     height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+    background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.8) 50%,
+        rgba(0, 0, 0, 0.8) 50%
+    );
     position: absolute;
     margin: 0;
     top: 50%;
@@ -151,23 +159,23 @@ ul li a:hover{
     border-radius: 10px;
     padding: 25px;
 }
-.form h2{
+.form h2 {
     width: 220px;
     font-family: sans-serif;
     text-align: center;
     color: #ff7200;
     font-size: 22px;
-    background-color: #fff; 
+    background-color: #fff;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
 }
-.form input{
+.form input {
     width: 250px;
     height: 40px;
     background: transparent;
     border-bottom: 1px solid #ff7200;
-    border-top:none;
+    border-top: none;
     border-right: none;
     border-left: none;
     color: #fff;
@@ -176,48 +184,52 @@ ul li a:hover{
     margin-top: 30px;
     font-family: sans-serif;
 }
-.form input:focus{
+.form input:focus {
     outline: none;
 }
-::placeholder{
-    color:#fff;
+::placeholder {
+    color: #fff;
     font-family: Arial;
 }
-.btnn{
-    width:245px;
+.btnn {
+    width: 245px;
     height: 40px;
     background: #ff7200;
     border: none;
-    margin-top: 30px; 
+    margin-top: 30px;
     font-size: 18px;
     border-radius: 10px;
     cursor: pointer;
     color: #fff;
     transition: 0.4s ease;
 }
-.btnn:hover{
+.btnn:hover {
     background: #fff;
     color: #ff7200;
 }
-.btnn a{
+.btnn a {
     text-decoration: none;
     color: #000;
     font-weight: bold;
 }
-.form .link{
-    font-family:Arial, Helvetica, sans-serif;
+.form .link {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
     padding-top: 20px;
     text-align: center;
 }
-.form .link a{
+.form .link a {
     text-decoration: none;
     color: #ff7200;
 }
-.container{
+.container {
     width: 70%;
     height: 70%;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+    background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.8) 50%,
+        rgba(0, 0, 0, 0.8) 50%
+    );
     position: absolute;
     margin: 0;
     top: 50%;
@@ -226,9 +238,9 @@ ul li a:hover{
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border-radius: 10px;
-    padding: 16px
+    padding: 16px;
 }
-.container h1{
+.container h1 {
     width: 220px;
     font-family: sans-serif;
     text-align: center;
@@ -239,13 +251,14 @@ ul li a:hover{
     margin: 2px;
     padding: 8px;
 }
-input[type=text], input[type=password] {
+input[type="text"],
+input[type="password"] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border-bottom: 1px solid #ff7200;
-    border-top:none;
+    border-top: none;
     border-right: none;
     border-left: none;
     background: transparent;
@@ -264,7 +277,7 @@ button {
     opacity: 0.9;
 }
 button:hover {
-    opacity:1;
+    opacity: 1;
 }
 /*.cancelbtn {
     padding: 14px 20px;
@@ -277,7 +290,7 @@ button:hover {
 hr {
     border: 1px solid #f1f1f1;
     margin-bottom: 25px;
-    }
+}
 /*.close {
     position: absolute;
     right: 35px;
@@ -292,21 +305,20 @@ hr {
     cursor: pointer;
 } */
 
-    /* Clear floats */
+/* Clear floats */
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
 }
 
-    /* Change styles for cancel button and signup button on extra small screens */
+/* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-     width: 100%;
+    .cancelbtn,
+    .signupbtn {
+        width: 100%;
+    }
 }
-}
-
-
 
 /*.liw{
     padding-top: 15px;
@@ -339,7 +351,3 @@ hr {
     font-weight: bold;
     text-align: center;
 }*/
-
-
-
- 
